<?xml version="1.0" encoding="utf-8"?>
<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="keyboard_layout_lt03lte_english_uk"
            android:label="@string/keyboard_layout_lt03lte_english_uk_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_english_uk" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_english_us"
            android:label="@string/keyboard_layout_lt03lte_english_us_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_english_us" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_english_us_intl"
            android:label="@string/keyboard_layout_lt03lte_english_us_intl_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_english_us_intl" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_german"
            android:label="@string/keyboard_layout_lt03lte_german_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_german" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_french"
            android:label="@string/keyboard_layout_lt03lte_french_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_french" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_french_ca"
            android:label="@string/keyboard_layout_lt03lte_french_ca_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_french_ca" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_italian"
            android:label="@string/keyboard_layout_lt03lte_italian_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_italian" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_japanese"
            android:label="@string/keyboard_layout_lt03lte_japanese_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_japanese" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_spanish"
            android:label="@string/keyboard_layout_lt03lte_spanish_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_spanish" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_belgian"
            android:label="@string/keyboard_layout_lt03lte_belgian_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_belgian" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_swedish"
            android:label="@string/keyboard_layout_lt03lte_swedish_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_swedish" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_korean"
            android:label="@string/keyboard_layout_lt03lte_korean_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_korean" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_zhuyin"
            android:label="@string/keyboard_layout_lt03lte_zhuyin_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_zhuyin" />
    <keyboard-layout android:name="keyboard_layout_lt03lte_cangjie"
            android:label="@string/keyboard_layout_lt03lte_cangjie_label"
            android:keyboardLayout="@raw/keyboard_layout_lt03lte_cangjie" />
</keyboard-layouts>
